--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular-devkit/build-angular": "^14.0.4",
     "@angular/cli": "~14.0.4",
     "@angular/compiler-cli": "^14.0.0",
+    "@angular/localize": "^14.1.2",
     "@types/jasmine": "~4.0.0",
     "@types/uuid": "^8.3.4",
     "jasmine-core": "~4.1.0",
