--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "firebase": "^9.9.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.4",
     "@angular/cli": "~14.0.4",
     "@angular/compiler-cli": "^14.0.0",
+    "@angular/localize": "^14.1.2",
     "@types/jasmine": "~4.0.0",
+    "@types/uuid": "^8.3.4",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
