--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/fire": "^7.4.1",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.0.0",
     "@angular/material": "^14.1.1",
     "@angular/platform-browser": "^14.0.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.4",
     "@angular/cli": "~14.0.4",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/localize": "^14.1.2",
     "@types/jasmine": "~4.0.0",
