--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "firebase": "^9.9.2",
+    "firebase-tools": "^11.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
@@ -31,8 +32,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.4",
     "@angular/cli": "~14.0.4",
-    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/compiler-cli": "^14.0.0",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/localize": "^14.1.2",
     "@types/jasmine": "~4.0.0",
     "@types/uuid": "^8.3.4",
