--- a/package.json
+++ b/package.json
@@ -10,38 +10,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0",
-    "@angular/cdk": "^14.1.1",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
+    "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.0",
+    "@angular/common": "^14.2.0",
+    "@angular/compiler": "^14.2.0",
+    "@angular/core": "^14.2.0",
     "@angular/fire": "^7.4.1",
     "@angular/flex-layout": "^14.0.0-beta.40",
-    "@angular/forms": "^14.0.0",
-    "@angular/material": "^14.1.1",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
-    "firebase": "^9.9.2",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.2.0",
+    "@angular/platform-browser": "^14.2.0",
+    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/router": "^14.2.0",
+    "firebase": "^9.9.4",
+    "firebase-tools": "^11.8.0",
+    "ncu": "^0.2.1",
+    "rxjs": "~7.5.6",
+    "tslib": "^2.4.0",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.4",
-    "@angular/cli": "~14.0.4",
+    "@angular-devkit/build-angular": "^14.2.1",
+    "@angular/cli": "~14.2.1",
+    "@angular/compiler-cli": "^14.2.0",
     "@angular/flex-layout": "^14.0.0-beta.40",
-    "@angular/compiler-cli": "^14.0.0",
-    "@angular/localize": "^14.1.2",
-    "@types/jasmine": "~4.0.0",
+    "@angular/localize": "^14.2.0",
+    "@types/jasmine": "~4.3.0",
     "@types/uuid": "^8.3.4",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "jasmine-core": "~4.3.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.2"
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.8.2"
   }
 }
